2018-08-20 Alexander Malysh <amalysh @ kannnel.org>
   * wmlscript/wsgram.[chy], wmlscript/wsint.h, wmlscript/wslexer.c: Applied patch that
     fixes build issues with bison. This fixes #699 .
     Thanks to Rici Lake for this patch.

2018-08-12 Alexander Malysh <amalysh @ kannnel.org>
   * gwlib/octstr.c: applied patch that fixes octstr_shrink_blanks.
     Thanks to Werner Coetzee for this patch.

2018-06-19  Stipe Tolj  <stolj at kannel.org>
    * Making stable release 1.4.5.

2018-06-19  Stipe Tolj  <stolj at kannel.org>
    * README: update documentation build package dependencies.

2018-06-19  Stipe Tolj  <stolj at kannel.org>
    * bootstrap.sh: re-order GNU auto-tools calls, NLC.
    * Makefile.in: provide phony 'am--refresh' to cope with bootstrapped source
      packages on different environments.

2018-06-19  Stipe Tolj  <stolj at kannel.org>
    * doc/*/[alligata|arch|userguide|wtls].xml: update DOCTYPE URL reference to
      new official URL location to fix 'make docs' processing.
    * configure.in: adding Debian 8 location for xml.dcl.