@@ -117,4 +117,9 @@ int main(int argc, char **argv)
     return 0;
 }
 
+#else
+int main(int argc, char **argv)
+{
+    return 1;
+}
 #endif
